# A_Gazebo_Simulator_For_Continuum_Parallel_Robots

./: LICENSE  README.md
CPR_planar/cpr_planar_description/: CMakeLists.txt  package.xml
CPR_planar/cpr_planar_description/config/: prismatic_joint_config.yaml
CPR_planar/cpr_planar_description/urdf/: limb_base.xacro  limb_base_fixed.xacro  limb_base_prismatic.xacro  (+2 more)
CPR_planar/cpr_planar_geometry/: CMakeLists.txt  package.xml
CPR_planar/cpr_planar_geometry/include/cpr_planar_geometry/: joint.h  limb.h  rod.h
CPR_planar/cpr_planar_geometry/src/: joint.cpp  limb.cpp  rod.cpp
CPR_planar/cpr_planar_gui/: CMakeLists.txt  package.xml  robot_gui.pro
CPR_planar/cpr_planar_messages/: CMakeLists.txt  package.xml
CPR_planar/cpr_planar_messages/msg/: DGMParameters.msg  IGMParameters.msg  JointValue.msg  JointsControl.msg  Wrench2D.msg
CPR_planar/cpr_planar_messages/srv/: GuessVectorHandling.srv
CPR_planar/cpr_planar_physics/: CMakeLists.txt  package.xml
CPR_planar/cpr_planar_physics/include/cpr_planar_physics/: cpr_planar_physics.h  cpr_planar_physics_plugin.h
CPR_planar/cpr_planar_physics/launch/: cpr_planar_simulator.launch  gazebo.launch  spawn_limb.launch
CPR_planar/cpr_planar_physics/launch/2PR/: 2PR_distal_plate.launch  2PR_limbs.launch  distal_plate.sdf.xacro  robot_config.yaml
CPR_planar/cpr_planar_physics/launch/2RR/: 2RR_distal_plate.launch  2RR_limbs.launch  distal_plate.sdf.xacro  robot_config.yaml
CPR_planar/cpr_planar_physics/launch/3ER/: 3ER_distal_plate.launch  3ER_limbs.launch  robot_config.yaml
CPR_planar/cpr_planar_physics/launch/3FR/: 3FR_distal_plate.launch  3FR_limbs.launch  distal_plate.sdf.xacro  robot_config.yaml
CPR_planar/cpr_planar_physics/launch/3PR/: 3PR_distal_plate.launch  3PR_limbs.launch  robot_config.yaml
CPR_planar/cpr_planar_physics/launch/3RR/: 3RR_distal_plate.launch  3RR_limbs.launch  distal_plate.sdf.xacro  robot_config.yaml
CPR_planar/cpr_planar_physics/launch/RERRFR/: RERRFR_distal_plate.launch  RERRFR_limbs.launch  distal_plate.sdf.xacro  robot_config.yaml
CPR_planar/cpr_planar_physics/launch/my_robot/: distal_plate.sdf.xacro  my_robot_distal_plate.launch  my_robot_limbs.launch  robot_config.yaml
CPR_planar/cpr_planar_physics/src/: cpr_planar_physics.cpp  physics_plugin.cpp
CPR_planar/cpr_planar_visual/: CMakeLists.txt  package.xml
CPR_spatial/cpr_description/: CMakeLists.txt  package.xml
CPR_spatial/cpr_geometry/: CMakeLists.txt  package.xml  robot_geometry.pro
CPR_spatial/cpr_gui/: CMakeLists.txt  package.xml
CPR_spatial/cpr_gui/src/: cpr_gui.cpp
CPR_spatial/cpr_gui/src/controllers/: generic_controller.cpp  generic_controller.h  generic_panel.cpp  generic_panel.h
CPR_spatial/cpr_gui/src/distal_plate_pose_panel/: distal_plate_pose_panel.cpp  distal_plate_pose_panel.h
CPR_spatial/cpr_gui/src/distal_plate_wrench_panel/: distal_plate_wrench_panel.cpp  distal_plate_wrench_panel.h  distal_plate_wrench_panel.pro
CPR_spatial/cpr_gui/src/dof_selection_window/: basic_motion.cpp  basic_motion.h  dof_controller.cpp  dof_controller.h  dof_selection_window.cpp  dof_selection_window.h  dof_selection_window.ui
CPR_spatial/cpr_gui/src/joints_control_panel/: joints_control_panel.cpp  joints_control_panel.h
CPR_spatial/cpr_gui/src/main_window/: main.cpp  main_window.cpp  main_window.h  menubar.cpp  menubar.h
CPR_spatial/cpr_gui/src/parameters_vector_manager/: main.cpp  parameters_vector_loader.cpp  parameters_vector_loader.h  parameters_vector_manager.cpp  parameters_vector_manager.h  parameters_vector_saving.cpp  parameters_vector_saving.h
CPR_spatial/cpr_gui/src/solver_options_panel/: solver_options_panel.cpp  solver_options_panel.h
CPR_spatial/cpr_messages/: CMakeLists.txt  package.xml
CPR_spatial/cpr_messages/cfg/: PIDControllerTuning.cfg  SingleAxisTuning.cfg
CPR_spatial/cpr_messages/msg/: DGMParams.msg  IGMParams.msg  JointsControl.msg
CPR_spatial/cpr_messages/srv/: RemoveRobot.srv
CPR_spatial/cpr_physics/: CMakeLists.txt  package.xml
CPR_spatial/cpr_physics/include/cpr_physics/: cpr_physics.h  cpr_physics_plugin.h
CPR_spatial/cpr_physics/launch/: cpr_simulator.launch  gazebo.launch  spawn_limb.launch  spawn_limb_Till.launch
CPR_spatial/cpr_physics/launch/3PFR_spatial/: 3PFR_spatial_distal_plate.launch  3PFR_spatial_limbs.launch  distal_plate.sdf.xacro  robot_config.yaml
CPR_spatial/cpr_physics/launch/6RFS/: 6RFS_distal_plate.launch  6RFS_limbs.launch  distal_plate.sdf.xacro  limb_base_revolute.xacro  robot_config.yaml  spawn_limb.launch
CPR_spatial/cpr_physics/launch/Realistic_Stewart_Gough_6FFR/: Realisitc_Stewart_Gough_6FFR_distal_plate.launch  distal_plate.sdf.xacro  robot_config.yaml
CPR_spatial/cpr_physics/launch/Stewart_Gough_6EFR/: Stewart_Gough_6EFR_distal_plate.launch  Stewart_Gough_6EFR_limbs.launch  robot_config.yaml
CPR_spatial/cpr_physics/launch/Stewart_Gough_6FFR/: Stewart_Gough_6FFR_distal_plate.launch  Stewart_Gough_6FFR_limbs.launch  distal_plate.sdf.xacro  distal_plate_.sdf.xacro  robot_config.yaml
CPR_spatial/cpr_physics/launch/Stewart_Gough_6FFR_Till/: Stewart_Gough_6FFR_Till_distal_plate.launch  Stewart_Gough_6FFR_Till_limbs.launch  distal_plate.sdf.xacro  distal_plate__.sdf.xacro  robot_config.yaml
CPR_spatial/cpr_physics/launch/Stewart_Gough_6PFF/: Stewart_Gough_6PFF_distal_plate.launch  Stewart_Gough_6PFF_limbs.launch  distal_plate.sdf.xacro  robot_config.yaml
CPR_spatial/cpr_physics/launch/Stewart_Gough_6PFR/: Stewart_Gough_6PFR_distal_plate.launch  Stewart_Gough_6PFR_limbs.launch  distal_plate.sdf.xacro  robot_config.yaml
CPR_spatial/cpr_physics/launch/Stewart_Gough_6PFS/: Stewart_Gough_6PFS_distal_plate.launch  Stewart_Gough_6PFS_limbs.launch  distal_plate.sdf.xacro  robot_config.yaml
CPR_spatial/cpr_physics/src/: controller.cpp  physics_plugin.cpp  robot_physics.cpp
CPR_spatial/cpr_visual/: CMakeLists.txt  package.xml
CPR_spatial/cpr_visual/include/cpr_visual/: shape_listener.h  shape_msg.h  shape_publisher.h  visual_plugin.h
CPR_spatial/cpr_visual/src/: shape_listener.cpp  shape_msg.cpp  shape_publisher.cpp  visual_plugin.cpp
(+66 files in other folders)
