<?xml version="1.0"?>
<package format="2">
  <name>cpr_messages</name>
  <version>1.0.0</version>
  <description>The cpr_messages package</description>

  <maintainer email="Andrea.Gotelli@ls2n.fr">Gotelli</maintainer>
  <license>MIT</license>
  <author email="Andrea.Gotelli@ls2n.fr">Gotelli</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
