<?xml version="1.0"?>
<package format="2">
  <name>cpr_visual</name>
  <version>0.0.0</version>
  <description>The cpr_visual package</description>

  <maintainer email="Andrea.Gotelli@ls2n.fr">Gotelli</maintainer>
  <license>MIT</license>
  <author email="Andrea.Gotelli@ls2n.fr">Gotelli</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
